// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skeleton demos > demo: Active 1`] = `
"<div class="ant-skeleton ant-skeleton-active" role="status" aria-busy="true" aria-label="Loading content">
  <!--v-if-->
  <div class="ant-skeleton-content">
    <h3 class="ant-skeleton-title"></h3>
    <ul class="ant-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton demos > demo: Basic 1`] = `
"<div class="ant-skeleton" role="status" aria-busy="true" aria-label="Loading content">
  <!--v-if-->
  <div class="ant-skeleton-content">
    <h3 class="ant-skeleton-title"></h3>
    <ul class="ant-skeleton-paragraph">
      <li></li>
      <li></li>
      <li style="width: 61%;"></li>
    </ul>
  </div>
</div>"
`;

exports[`Skeleton demos > demo: Children 1`] = `
"<div>
  <div style="margin-bottom: 16px;"><label><input type="checkbox" checked=""> Loading </label></div>
  <div class="ant-skeleton ant-skeleton-active" role="status" aria-busy="true" aria-label="Loading content">
    <!--v-if-->
    <div class="ant-skeleton-content">
      <h3 class="ant-skeleton-title"></h3>
      <ul class="ant-skeleton-paragraph">
        <li></li>
        <li></li>
        <li style="width: 61%;"></li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`Skeleton demos > demo: Complex 1`] = `
"<div style="display: flex; flex-direction: column; gap: 24px;">
  <div class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
    <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
    <div class="ant-skeleton-content">
      <h3 class="ant-skeleton-title"></h3>
      <ul class="ant-skeleton-paragraph">
        <li></li>
        <li style="width: 61%;"></li>
      </ul>
    </div>
  </div>
  <div class="ant-skeleton ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
    <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
    <div class="ant-skeleton-content">
      <h3 class="ant-skeleton-title"></h3>
      <ul class="ant-skeleton-paragraph">
        <li></li>
        <li></li>
        <li></li>
        <li style="width: 61%;"></li>
      </ul>
    </div>
  </div>
</div>"
`;

exports[`Skeleton demos > demo: Element 1`] = `
"<div style="display: flex; flex-direction: column; gap: 16px;">
  <div style="display: flex; gap: 16px; align-items: center;">
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-button"></span></div>
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-button ant-skeleton-button-sm"></span></div>
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-button ant-skeleton-button-lg"></span></div>
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-button ant-skeleton-button-circle"></span></div>
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-button ant-skeleton-button-round"></span></div>
  </div>
  <div style="display: flex; gap: 16px; align-items: center;">
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-avatar ant-skeleton-avatar-lg ant-skeleton-avatar-circle"></span></div>
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-avatar ant-skeleton-avatar-square"></span></div>
  </div>
  <div style="display: flex; gap: 16px;">
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-input"></span></div>
    <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-input ant-skeleton-input-sm"></span></div>
  </div>
  <div class="ant-skeleton ant-skeleton-element ant-skeleton-active" aria-hidden="true"><span class="ant-skeleton-image"><svg viewBox="0 0 1098 1024" xmlns="http://www.w3.org/2000/svg" class="ant-skeleton-image-svg"><path d="M365.714286 329.142857q0 45.714286-32.036571 77.677714t-77.677714 32.036571-77.677714-32.036571-32.036571-77.677714 32.036571-77.677714 77.677714-32.036571 77.677714 32.036571 32.036571 77.677714zM950.857143 548.571429l0 256-804.571429 0 0-109.714286 182.857143-182.857143 91.428571 91.428571 292.571429-292.571429zM1005.714286 146.285714l-914.285714 0q-7.460571 0-12.873143 5.412571t-5.412571 12.873143l0 694.857143q0 7.460571 5.412571 12.873143t12.873143 5.412571l914.285714 0q7.460571 0 12.873143-5.412571t5.412571-12.873143l0-694.857143q0-7.460571-5.412571-12.873143t-12.873143-5.412571zM1097.142857 164.571429l0 694.857143q0 37.741714-26.843429 64.585143t-64.585143 26.843429l-914.285714 0q-37.741714 0-64.585143-26.843429t-26.843429-64.585143l0-694.857143q0-37.741714 26.843429-64.585143t64.585143-26.843429l914.285714 0q37.741714 0 64.585143 26.843429t26.843429 64.585143z" fill="#bfbfbf"></path></svg></span></div>
</div>"
`;

exports[`Skeleton demos > demo: List 1`] = `
"<div>
  <div style="margin-bottom: 16px;"><button type="button" role="switch" aria-checked="true" class="ant-switch ant-switch-checked">
      <!--v-if-->
      <div class="ant-switch-handle">
        <!--v-if-->
      </div><span class="ant-switch-inner"><span class="ant-switch-inner-checked"></span><span class="ant-switch-inner-unchecked"></span></span>
    </button><span style="margin-left: 8px;">Loading</span></div>
  <div style="display: flex; flex-direction: column; gap: 16px;">
    <div style="padding: 16px; border: 1px solid rgb(240, 240, 240); border-radius: 8px;">
      <div class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
        <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
        <div class="ant-skeleton-content">
          <h3 class="ant-skeleton-title"></h3>
          <ul class="ant-skeleton-paragraph">
            <li></li>
            <li style="width: 61%;"></li>
          </ul>
        </div>
      </div>
    </div>
    <div style="padding: 16px; border: 1px solid rgb(240, 240, 240); border-radius: 8px;">
      <div class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
        <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
        <div class="ant-skeleton-content">
          <h3 class="ant-skeleton-title"></h3>
          <ul class="ant-skeleton-paragraph">
            <li></li>
            <li style="width: 61%;"></li>
          </ul>
        </div>
      </div>
    </div>
    <div style="padding: 16px; border: 1px solid rgb(240, 240, 240); border-radius: 8px;">
      <div class="ant-skeleton ant-skeleton-active ant-skeleton-with-avatar" role="status" aria-busy="true" aria-label="Loading content">
        <div class="ant-skeleton-header"><span class="ant-skeleton-avatar ant-skeleton-avatar-circle"></span></div>
        <div class="ant-skeleton-content">
          <h3 class="ant-skeleton-title"></h3>
          <ul class="ant-skeleton-paragraph">
            <li></li>
            <li style="width: 61%;"></li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
